# poetrytutorial

./: pyproject.toml
project/project/: settings.py
