[tool.poetry]
name = "cmoswar project"
version = "0.1.0"
description = "this is a  cmoswar project speech to text"
authors = ["brijesh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.4"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
